--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "cfenv": "^1.0.4",
-    "ghost" : "0.11.8",
+    "ghost": "0.11.8",
+    "ghost-blobber-service": "file:///Users/mik/workspace/ghost-blobber-service",
     "ghost-s3-service": "^1.0.2"
   }
 }
